--- a/src/content/404.md
+++ b/src/content/404.md
@@ -3,4 +3,12 @@ title: 404
 description: This page doesn't exist yet!
 ---
 
+Maybe you were sent to the wrong page, or a link has been entered incorrectly. If not, click <a id="new-page-link">here</a> to create it and further expand this wiki!
 
+<script>
+    var document_destination = window.location.href.toString().split(window.location.host)[1]
+    var document_url = document_destination.replace('addon-project/', '')
+    var current_path = document_url.substring(0, document_url.lastIndexOf("/"))
+    var current_page = document_url.substring(document_url.lastIndexOf("/") + 1, document_url.length).replace('.html', '')
+    $('#new-page-link').attr('href', 'https://github.com/MCResourcePile/addon-project/edit/source/src/' + current_path + '?filename=' + current_page + '.md')
+</script>
